# target-azureblobstorage

./: .gitignore  meltano.yml  pyproject.toml  tox.ini
data/: out-small.json
target_azureblobstorage/: __init__.py  __main__.py  sinks.py  target.py
tests/: __init__.py
